--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = pyprop8-valentineap
+name = pyprop8
 version = 0.1
 author = Andrew Valentine
 author_email = andrew.valentine@durham.ac.uk
