added requirements to setup

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,5 +20,7 @@ package_dir =
 packages = find:
 python_requires = >=3.6
 
+install_requires = ['numpy','scipy']
+
 [options.packages.find]
 where = src
